# zetesis

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json
src/zetesis/: client.py
